modal/render one film card

--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -5,6 +5,7 @@
   --black-color: #000000;
   --red-lining-color: #ff001b;
   --footer-text-color: #545454;
+  --footer-bg-color: #F7F7F7
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   --duration: 250ms;
 }
