--- a/src/partials/film-modal.html
+++ b/src/partials/film-modal.html
@@ -1,4 +1,4 @@
-<div class="backdrop visually-hidden">
+<div class="backdrop is-hidden">
   <div class="film-card">
     <div class="spinner--modal"></div>
     <button class="film-card__button-close" type="button">
