--- a/src/sass/helpers/_loader.scss
+++ b/src/sass/helpers/_loader.scss
@@ -1,10 +1,11 @@
 .fountainG {
-    color: #ff6b08;
+    //color: #ff6b08;
+    color: var(--primary-oange-color);
   }
   .loader {
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: var(--white-color);
     position: fixed;
     top: 0;
     left: 0;
@@ -22,7 +23,7 @@
   .fountainG {
     position: absolute;
     top: 0;
-    background-color: rgb(255, 107, 8);
+    background-color: var(--primary-oange-color);
     width: 33px;
     height: 33px;
     animation-name: bounce_fountainG;
@@ -67,50 +68,50 @@
   @keyframes bounce_fountainG {
     0% {
       transform: scale(1);
-      background-color: rgb(255, 107, 8);
+      background-color: var(--primary-oange-color);
     }
     100% {
       transform: scale(0.3);
-      background-color: rgba(255, 107, 8, 0.94);
+      background-color: var(--secondary-orange-color);
     }
   }
   @-o-keyframes bounce_fountainG {
     0% {
       -o-transform: scale(1);
-      background-color: rgb(255, 107, 8);
+      background-color: var(--primary-oange-color);
     }
     100% {
       -o-transform: scale(0.3);
-      background-color: rgba(255, 107, 8, 0.94);
+      background-color: var(--secondary-orange-color);
     }
   }
   @-ms-keyframes bounce_fountainG {
     0% {
       -ms-transform: scale(1);
-      background-color: rgb(255, 107, 8);
+      background-color: var(--primary-oange-color);
     }
     100% {
       -ms-transform: scale(0.3);
-      background-color: rgba(255, 107, 8, 0.94);
+      background-color: var(--secondary-orange-color);
     }
   }
   @-webkit-keyframes bounce_fountainG {
     0% {
       -webkit-transform: scale(1);
-      background-color: rgb(255, 107, 8);
+      background-color: var(--primary-oange-color);
     }
     100% {
       -webkit-transform: scale(0.3);
-      background-color: rgba(255, 107, 8, 0.94);
+      background-color: var(--secondary-orange-color);
     }
   }
   @-moz-keyframes bounce_fountainG {
     0% {
       -moz-transform: scale(1);
-      background-color: rgb(255, 107, 8);
+      background-color: var(--primary-oange-color);
     }
     100% {
       -moz-transform: scale(0.3);
-      background-color: rgba(255, 107, 8, 0.94);
+      background-color: var(--secondary-orange-color);
     }
   }
