add library header

--- a/src/partials/header-li.html
+++ b/src/partials/header-li.html
@@ -1,7 +1,7 @@
 <header class="library-header">
   <div class="library-header-nav conteiner">
     <div class="library-header-logo">
-      <a class="library-header-logo__link" href="/src/index.html"
+      <a href="/src/index.html"
         ><img class="library-header-logo__img" src="./images/film.svg" alt="" />
         <h1 class="library-header-logo__name">Filmoteka</h1>
       </a>
