--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,22 @@
-<footer></footer>
+<footer class="footer">
+<div class="footer__container">
+       <div class="footer__first-element">
+            <p class="footer__text"> © 2020 | All Rights Reserved |</p>
+       </div>
+        <div class="footer__below-elements">
+            <div class="footer__dev">
+                <p class="footer__text">Developed with</p>
+            </div>
+            <div class="footer__icon">
+                <svg class="footer__logo" width="14" height="13">
+                    <use href="/src/images/symbol-defs.svg#icon-heart"></use>
+                </svg>
+            </div>
+            <div class="footer__by">
+                <p class="footer__text"> by <a href="" class="footer__link">GoIT Students</a> </p>
+            </div>
+            
+        
+        </div>
+</div>
+</footer>
