main changes(markup, styles, images)

--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -1,5 +1,5 @@
 :root {
-  --primary-oange-color: #ff6b08;
+  --primary-orange-color: #ff6b08;
   --secondary-orange-color: #ff6b01;
   --white-color: #ffffff;
   --black-color: #000000;
