--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,7 @@
 @import './helpers/vars';
 @import './helpers/common';
+
+// бэкдроп для модалок
+@import './components/backdrop'; // модалка тим мемберов
+
+@import './components/modal-team';
