footer with modal-open class

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,7 +13,7 @@
                 </svg>
             </div>
             <div class="footer__by">
-                <p class="footer__text"> by <a href="" class="footer__link">GoIT Students</a> </p>
+                <p class="footer__text"> by <a href="" class="footer__link js-modal-open">GoIT Students</a> </p>
             </div>
             
         
