--- a/src/partials/header-li.html
+++ b/src/partials/header-li.html
@@ -1,5 +1,5 @@
-<header class="library-header container">
-  <div class="library-header--nav">
+<header class="library-header">
+  <div class="library-header--nav container">
     <div class="library-header--nav__container">
       <div class="library-header--logo">
         <a href="/src/index.html"
