--- a/src/sass/helpers/_film-modal.scss
+++ b/src/sass/helpers/_film-modal.scss
@@ -10,9 +10,9 @@
   overflow: auto;
 }
 
-// .is-hidden {
-//   visibility: hidden;
-// }
+.is-hidden {
+  visibility: hidden;
+}
 
 .film-card {
   background-color: white;
