--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,4 @@
-<div class="gallery">
+<ul class="gallery">
   <!-- Карточки изображений -->
-</div>
+</ul>
 <button type="button" class="load-more">Load more</button>
