--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -13,10 +13,17 @@ p {
   display: flex;
   flex-wrap: wrap;
 
-  max-width: 1140px;
+  // max-width: 1140px;
   margin: 20px auto;
 
-  gap: 10px;
+  // gap: 10px;
+
+  @media screen and (min-width: 768px) {
+    width: calc(100% / 2 - 30px);
+  }
+  @media screen and (min-width: 1280px) {
+    width: calc(100% / 3 - 30px);
+  }
 }
 .gallery__item {
   justify-content: center;
