--- a/src/sass/helpers/_header-in.scss
+++ b/src/sass/helpers/_header-in.scss
@@ -1,8 +1,4 @@
-.header {
-    
-    height: 230px;
-    margin-left: auto;
-    margin-right: auto;
+.header {   
     padding-top: 40px;
     padding-bottom: 44px;   
    
@@ -30,8 +26,6 @@
         }
 
     @media screen and (min-width:768px){
-            height: 220px;
-
             background-image: linear-gradient(to right,
                 rgba(0, 0, 0, 0.56),
                 rgba(0, 0, 0, 0.56)),
@@ -49,8 +43,8 @@
     }
     
     @media screen and (min-width:1280px) {
-        max-width: 1600px;
-        height: 216px;
+        margin-left: auto;
+        margin-right: auto;
 
         background-image: linear-gradient(to right,
             rgba(0, 0, 0, 0.56),
@@ -76,9 +70,7 @@
     margin-bottom: 54px;
 }
 
-//------logo-----
-
-.header-logo a{
+.header-logo .header-logo__link{
     display: flex;
     align-items: center;
 }
@@ -105,8 +97,6 @@
     }
 }
 
-//----------menu-----------
-
 .header-list{
     display: flex;
     align-items: center;
@@ -126,26 +116,24 @@
 
     transition: color var(--duration) var(--timing-function);
 
+    &--current::after {
+        content: '';
+        width: 100%;
+        height: 3px;
+        border-radius: 2px;
+
+        position: absolute;
+
+        left: 0.5px;
+        bottom: -4px;
+
+        background-color: var(--red-lining-color);
+    }
+
     &:hover {
         color: darkgrey;
     }
 }
-
-.header-list__link--current::after {
-    content: '';
-    width: 100%;
-    height: 3px;
-    border-radius: 2px;
-
-    position: absolute;
-    
-    left: 0.5px;
-    bottom: -4px;    
-    
-    background-color: var(--red-lining-color);
-}
-
-//--------------search-form--------
 
 .header-search-form { 
   
@@ -174,15 +162,15 @@
     border: none;
     border-bottom: 0.5px solid var(--white-color);
     background-color: transparent;
-    outline: none;     
+    outline: none; 
+    
+    &::placeholder {
+        font-size: 14px;
+        line-height: 1.14;
+    
+        color: var(--white-color);
+    }
    
-}
-
-.header-search-form__input::placeholder {
-    font-size: 14px;
-    line-height: 1.14;
-
-    color:var(--white-color);
 }
 
 .header-search-form__btn{
@@ -202,7 +190,7 @@
     display: block;
     font-size: 14px;
     line-height: 1.14;
-   color: var(--red-lining-color); 
+    color: var(--red-lining-color); 
 
     @media screen and (min-width:768px) {
         text-align: center;
