--- a/src/sass/components/_galleryMarkup.scss
+++ b/src/sass/components/_galleryMarkup.scss
@@ -2,19 +2,8 @@
 //   display: flex;
 //   flex-wrap: wrap;
 //   align-items: center;
-//   list-style: none;
-// }
 
-@media screen and (min-width: 320px) {
-  .section {
-    margin-top: 20px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .section {
-    margin-top: 60px;
-  }
-}
+// }
 
 @media screen and (min-width: 768px) {
   .card-set {
@@ -37,9 +26,16 @@
   cursor: pointer;
 }
 
+.card-link {
+  text-decoration: none;
+}
+
 @media screen and (max-width: 768px) {
   .card-set__item:not(:last-child) {
     margin-bottom: 30px;
+  }
+  .card-set__item {
+    width: 336px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -80,7 +76,7 @@
   display: flex;
 }
 
-.card-set__genre-movie,
+.card-set__genre,
 .card-set__production-year {
   color: #ff6b08;
 }
