--- a/src/sass/helpers/_film-modal.scss
+++ b/src/sass/helpers/_film-modal.scss
@@ -152,6 +152,7 @@
   width: 110px;
   height: 44px;
   background-color: white;
+  color: black;
   border-radius: 5px;
   border: 1px solid black;
   text-transform: uppercase;
@@ -161,7 +162,7 @@
   }
   &:focus {
     background-color: #ff6b01;
-    color: black;
+    color: white;
     border: none;
   }
   @media screen and(min-width:768px) {
