--- a/src/partials/header-in.html
+++ b/src/partials/header-in.html
@@ -14,12 +14,18 @@
         <li class="header-list__item">
           <a
             class="header-list__link header-list__link--current"
+            data-page="home"
             href="/src/index.html"
             >Home</a
           >
         </li>
         <li class="header-list__item">
-          <a class="header-list__link" href="/src/library.html">My Library</a>
+          <a
+            class="header-list__link"
+            data-page="library"
+            href="/src/library.html"
+            >My Library</a
+          >
         </li>
       </ul>
     </nav>
