--- a/src/sass/helpers/_loader.scss
+++ b/src/sass/helpers/_loader.scss
@@ -1,6 +1,6 @@
 .fountainG {
     //color: #ff6b08;
-    color: var(--primary-oange-color);
+    color: var(--primary-orange-color);
   }
   .loader {
     width: 100%;
@@ -23,7 +23,7 @@
   .fountainG {
     position: absolute;
     top: 0;
-    background-color: var(--primary-oange-color);
+    background-color: var(--primary-orange-color);
     width: 33px;
     height: 33px;
     animation-name: bounce_fountainG;
@@ -68,7 +68,7 @@
   @keyframes bounce_fountainG {
     0% {
       transform: scale(1);
-      background-color: var(--primary-oange-color);
+      background-color: var(--primary-orange-color);
     }
     100% {
       transform: scale(0.3);
@@ -78,7 +78,7 @@
   @-o-keyframes bounce_fountainG {
     0% {
       -o-transform: scale(1);
-      background-color: var(--primary-oange-color);
+      background-color: var(--primary-orange-color);
     }
     100% {
       -o-transform: scale(0.3);
@@ -88,7 +88,7 @@
   @-ms-keyframes bounce_fountainG {
     0% {
       -ms-transform: scale(1);
-      background-color: var(--primary-oange-color);
+      background-color: var(--primary-orange-color);
     }
     100% {
       -ms-transform: scale(0.3);
@@ -98,7 +98,7 @@
   @-webkit-keyframes bounce_fountainG {
     0% {
       -webkit-transform: scale(1);
-      background-color: var(--primary-oange-color);
+      background-color: var(--primary-orange-color);
     }
     100% {
       -webkit-transform: scale(0.3);
@@ -108,7 +108,7 @@
   @-moz-keyframes bounce_fountainG {
     0% {
       -moz-transform: scale(1);
-      background-color: var(--primary-oange-color);
+      background-color: var(--primary-orange-color);
     }
     100% {
       -moz-transform: scale(0.3);
