--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,6 +6,8 @@
 @import './helpers/film-modal';
 @import './components/galleryMarkup';
 @import './gallery';
+@import './helpers/pagination';
+
 
 @import './footer';
 // бэкдроп для модалок
