Adds function for my library.

--- a/src/partials/header-li.html
+++ b/src/partials/header-li.html
@@ -17,7 +17,7 @@
         </li>
         <li class="library-header--list__item">
           <a
-            class="library-header--list__link library-header--list__link--active"
+            class="library-header--list__link library-header--list__link--active js-my-library"
             href="/src/library.html"
             >MY LIBRARY</a
           >
@@ -25,13 +25,13 @@
       </ul>
     </div>
     <div class="library--btn__container">
-      <button
-        type="button"
-        class="library--btn library--btn__watched library--btn--active"
-      >
+      <button type="button" class="library--btn library--btn__watched">
         WATCHED
       </button>
-      <button type="button" class="library--btn library--btn__queue">
+      <button
+        type="button"
+        class="library--btn library--btn__queue library--btn--active"
+      >
         QUEUE
       </button>
     </div>
