--- a/src/partials/header-in.html
+++ b/src/partials/header-in.html
@@ -19,7 +19,9 @@
           >
         </li>
         <li class="header-list__item">
-          <a class="header-list__link" href="/src/library.html">My Library</a>
+          <a class="header-list__link js-my-library" href="/src/library.html"
+            >My Library</a
+          >
         </li>
       </ul>
     </nav>
