--- a/src/sass/components/_galleryMarkup.scss
+++ b/src/sass/components/_galleryMarkup.scss
@@ -8,14 +8,6 @@
     padding-top: 60px;
     padding-bottom: 60px;
   }
-  // @media screen and (min-width: 1024px) {
-  //   .card-set {
-  //     display: flex;
-  //     flex-wrap: wrap;
-  //     margin-left: -30px;
-  //     margin-top: -30px;
-  //   }
-  // }
 }
 
 .card-set__item {
@@ -62,27 +54,6 @@
   }
 }
 
-// @media screen and (min-width: 768px) {
-//   .card-set__item {
-//     // width: calc(100% / 2 - 32px);
-//     width: 336px;
-//     margin-bottom: 32px;
-//   }
-//   .card-set__item.card-set__item:nth-child(n + 2) {
-//     margin-right: 0;
-//   }
-// }
-// @media screen and (min-width: 1024px) {
-//   .card-set__item {
-//     width: calc(100% / 3 - 30px);
-
-//     margin-top: 30px;
-//   }
-//   .card-set__item.card-set__item:nth-child(-n + 3) {
-//     margin-top: 0;
-//   }
-// }
-
 .card-set__img {
   border-radius: 5px;
   width: 100%;
@@ -93,12 +64,24 @@
   line-height: 1.17;
   text-transform: uppercase;
   color: #000000;
+  font-weight: 500;
+
+  @media screen and (min-width: 768px) {
+    line-height: 1.3;
+  }
+  @media screen and (min-width: 1280px) {
+    line-height: 1.2;
+    font-size: 20px;
+  }
 }
 
 .card-set__genre {
-  justify-content: left;
-  align-items: baseline;
-  display: flex;
+  font-weight: 500;
+  line-height: 1.3;
+  @media screen and (min-width: 1280px) {
+    font-size: 20px;
+    line-height: 1.2;
+  }
 }
 
 .card-set__genre,
