Adds new changes.

--- a/src/partials/header-li.html
+++ b/src/partials/header-li.html
@@ -17,7 +17,7 @@
         </li>
         <li class="library-header--list__item">
           <a
-            class="library-header--list__link library-header--list__link--active js-my-library"
+            class="library-header--list__link library-header--list__link--active"
             href="/src/library.html"
             >MY LIBRARY</a
           >
