--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,3 +14,4 @@
 @import './components/backdrop'; // модалка тим мемберов
 
 @import './components/modal-team';
+@import './components/library-empty';
