fixed modal+ add-member

--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -156,8 +156,8 @@
             <div class="team__img-wrapper">
               <img
                 class="team__img team__img--first"
-                src="/src/images/team/andriy-pustovit.jpg"
-                alt="Andriy Pustovit"
+                src="/src/images/team/Harmai-Viktor.jpg"
+                alt="Harmai Viktor"
                 width="170"
                 height="120"
               />
@@ -165,19 +165,19 @@
               <img
                 class="team__img team__img--second"
                 src="/src/images/team/anonymus.jpg"
-                alt="Andriy Pustovit"
+                alt="Harmai Viktor"
                 width="170"
                 height="120"
               />
             </div>
 
-            <h3 class="team__developer">Andriy Pustovit</h3>
+            <h3 class="team__developer">Harmai Viktor</h3>
             <p class="team__prof">Front-end Developer</p>
 
             <ul class="team__social">
               <li class="team__link">
                 <a
-                  href="https://github.com/Andriy362"
+                  href="https://github.com/viktor-harmai"
                   target="_blank"
                   rel="noreferrer noopener"
                   aria-label="GitHub"
@@ -188,7 +188,7 @@
 
               <li class="team__link">
                 <a
-                  href="https://www.linkedin.com/"
+                  href="https://www.linkedin.com"
                   target="_blank"
                   rel="noreferrer noopener"
                   aria-label="LinkedIn"
@@ -477,55 +477,6 @@
               <li class="team__link">
                 <a
                   href=" https://www.linkedin.com/in/andrey-gnatovskiy-b924916a/"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  aria-label="LinkedIn"
-                >
-                  <i class="fa-brands fa-linkedin-in fa-lg"></i>
-                </a>
-              </li>
-            </ul>
-          </li>
-
-          <!-- team member 11 -->
-
-          <li class="team__item">
-            <div class="team__img-wrapper">
-              <img
-                class="team__img team__img--first"
-                src="#"
-                alt="team-member11"
-                width="170"
-                height="120"
-              />
-
-              <img
-                class="team__img team__img--second"
-                src="/src/images/team/anonymus.jpg"
-                alt="team-member11"
-                width="170"
-                height="120"
-              />
-            </div>
-
-            <h3 class="team__developer">team-member11</h3>
-            <p class="team__prof">Front-end Developer</p>
-
-            <ul class="team__social">
-              <li class="team__link">
-                <a
-                  href="#"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  aria-label="GitHub"
-                >
-                  <i class="fa-brands fa-github fa-lg"></i>
-                </a>
-              </li>
-
-              <li class="team__link">
-                <a
-                  href="https://www.linkedin.com"
                   target="_blank"
                   rel="noreferrer noopener"
                   aria-label="LinkedIn"
