--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -7,6 +7,7 @@
   --footer-text-color: #545454;
   --footer-bg-color: #F7F7F7
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --description-color: #8C8C8C;
   --duration: 250ms;
 }
 
