--- a/src/sass/helpers/_film-modal.scss
+++ b/src/sass/helpers/_film-modal.scss
@@ -183,3 +183,9 @@
 .film-card__description-about {
   margin-bottom: 20px;
 }
+
+.film-card__wrapper {
+  @media screen and(min-width:768px) {
+    display: flex;
+  }
+}
