--- a/src/sass/components/_galleryMarkup.scss
+++ b/src/sass/components/_galleryMarkup.scss
@@ -78,6 +78,7 @@
 .card-set__genre {
   font-weight: 500;
   line-height: 1.3;
+  color: #ff6b08;
   @media screen and (min-width: 1280px) {
     font-size: 20px;
     line-height: 1.2;
@@ -92,4 +93,7 @@
 .card-set__description {
   align-items: baseline;
   display: flex;
+}
+.genre {
+  color: #ff6b08;
 }
