--- a/src/partials/header-li.html
+++ b/src/partials/header-li.html
@@ -31,13 +31,13 @@
       </ul>
     </div>
     <div class="library--btn__container">
-      <button type="button" class="library--btn library--btn__watched">
-        WATCHED
-      </button>
       <button
         type="button"
-        class="library--btn library--btn__queue library--btn--active"
+        class="library--btn library--btn__watched library--btn--active"
       >
+        WATCHED
+      </button>
+      <button type="button" class="library--btn library--btn__queue">
         QUEUE
       </button>
     </div>
