--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -5,7 +5,7 @@
   --black-color: #000000;
   --red-lining-color: #ff001b;
   --footer-text-color: #545454;
-  --footer-bg-color: #F7F7F7
+  --footer-bg-color: #F7F7F7;
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   --description-color: #8C8C8C;
   --duration: 250ms;
