--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,7 @@
 @import './components/galleryMarkup';
 @import './gallery';
 @import './helpers/pagination';
+@import './components/dark-on';
 
 
 @import './footer';
