--- a/src/sass/components/_dark-on.scss
+++ b/src/sass/components/_dark-on.scss
@@ -4,7 +4,7 @@
 
 body.dark {
   background-color: #292c35;
-   
+
   & .footer {
     color: #fff;
     background-color: #383c49;
@@ -12,8 +12,8 @@ body.dark {
 
   & .card-set__title {
     color: #fff;
-  } 
-} 
+  }
+}
 
 .checkbox {
   opacity: 0;
@@ -35,6 +35,7 @@ body.dark {
   width: 52px;
   transform: scale(1);
   left: 82%;
+  margin-top: 5px;
 }
 
 .label .ball {
@@ -61,7 +62,6 @@ body.dark {
 }
 
 .fa-sun {
- 
   font-size: 12px;
   position: absolute;
   right: 7px;
