--- a/src/sass/helpers/_common.scss
+++ b/src/sass/helpers/_common.scss
@@ -9,6 +9,10 @@ body {
   font-size: 12px;
 }
 
+#library #tui-pagination-container {
+  display: none;
+}
+
 .container {
   width: 100%;
   min-width: 320px;
