--- a/src/sass/components/_galleryMarkup.scss
+++ b/src/sass/components/_galleryMarkup.scss
@@ -57,6 +57,13 @@
 .card-set__img {
   border-radius: 5px;
   width: 100%;
+  height: 398px;
+  @media screen and (min-width: 768px) {
+    height: 455px;
+  }
+  @media screen and (min-width: 1280px) {
+    height: 574px;
+  }
 }
 
 .card-set__title {
