--- a/src/sass/components/_galleryMarkup.scss
+++ b/src/sass/components/_galleryMarkup.scss
@@ -11,11 +11,23 @@
 }
 
 .card-set__item {
+  border-radius: 5px;
   cursor: pointer;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover {
+    box-shadow: 7px -7px 21px rgba(123, 64, 22, 0.6);
+  }
+  @media screen and (min-width: 768px) {
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover {
+      transform: scale(1.03);
+    }
+  }
 }
 
 .card-link {
   text-decoration: none;
+  display: block;
 }
 
 .card-set__item {
@@ -66,6 +78,7 @@
   text-transform: uppercase;
   color: #000000;
   font-weight: 500;
+  padding-left: 5px;
 
   @media screen and (min-width: 768px) {
     line-height: 1.3;
@@ -94,6 +107,8 @@
 .card-set__description {
   align-items: baseline;
   display: flex;
+  padding-bottom: 2px;
+  padding-left: 5px;
 }
 .genre {
   color: #ff6b08;
