--- a/src/sass/components/_header-in.scss
+++ b/src/sass/components/_header-in.scss
@@ -79,11 +79,18 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 54px;
+
+  @media screen and (min-width: 768px) {
+  margin-bottom: 41px;
+}
+
+
+
 }
 
 .header-logo .header-logo__link {
   display: flex;
-  align-items: center;
+  align-items: baseline;
 }
 
 .header-logo__name {
@@ -151,6 +158,7 @@
 
   @media screen and (min-width: 768px) {
     width: 336px;
+    margin-bottom: 20px;
   }
 
   @media screen and (min-width: 1280px) {
