--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,7 +1,7 @@
 @import './helpers/vars';
 @import './helpers/common';
 @import './helpers/loader';
-@import './helpers/header-in';
+@import './components/header-in';
 @import './components/library-header';
 @import './helpers/film-modal';
 @import './components/galleryMarkup';
