--- a/src/sass/helpers/_film-modal.scss
+++ b/src/sass/helpers/_film-modal.scss
@@ -22,7 +22,7 @@
 
   @media screen and(min-width:$tablet) {
     margin-top: 0px;
-    height: 552px;
+    height: auto;
     width: 704px;
     display: flex;
     padding: 40px 72px 40px 36px;
