--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,11 +7,12 @@
       <div class="footer__dev">
         <p class="footer__text">Developed with</p>
       </div>
-      <div class="footer__icon">
+      <div class="heart"></div>
+      <!-- <div class="footer__icon">
         <svg class="footer__logo" width="14" height="13">
           <use href="/src/images/symbol-defs.svg#icon-heart"></use>
         </svg>
-      </div>
+      </div> -->
       <div class="footer__by">
         <p class="footer__text">
           by <a href="" class="footer__link js-modal-open">GoIT Students</a>
