--- a/src/sass/components/_library-empty.scss
+++ b/src/sass/components/_library-empty.scss
@@ -16,4 +16,11 @@
 .position {
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
+  @media screen and (max-width: 768px) {
+    width: 50%;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 35%;
+  }
 }
