--- a/src/sass/helpers/_common.scss
+++ b/src/sass/helpers/_common.scss
@@ -7,6 +7,9 @@ html {
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 #library #tui-pagination-container {
