--- a/src/sass/components/_library-empty.scss
+++ b/src/sass/components/_library-empty.scss
@@ -1,8 +1,13 @@
 .empty-library {
+  display: flex;
+  justify-content: center;
   margin-top: 30px;
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+  flex-direction: column;
+  align-items: center;
+  // margin-left: auto;
+  // margin-right: auto;
+  width: 100%;
 }
 
 .empty-library__title {
